--- a/src/styles/components/_video.scss
+++ b/src/styles/components/_video.scss
@@ -1,14 +1,17 @@
 .video-section {
-  padding-top: 90px;
+  margin-top: 90px;
+  position: relative;
 
   .video-container {
-    width: 100%;
-    height: 100vh;
+    position: relative;
+    overflow-x: hidden;
+    height: 98vh;
     cursor: pointer;
 
     .react-player {
       width: 100% !important;
       height: 100% !important;
+      overflow: hidden;
 
       video {
         object-fit: cover;
@@ -24,8 +27,21 @@
     width: 100%;
     top: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     color: white;
+    padding-top: 40px;
+
+    h2 {
+      padding: 16px;
+      font-size: 40px;
+      font-weight: bold;
+      color: #fff;
+    }
+    p {
+      font-size: 16px;
+      color: #fff;
+    }
   }
 }
