--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,6 @@
 .header_section {
   height: 100vh;
+  width: 100%;
   // background: url(../../assets/img/banner-bg.png) center;
   background-color: #2b2c2c;
 
