--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -9,41 +9,57 @@
     margin: 0 auto;
     padding: 0 15px;
 
-    .input-email {
+    .contact {
       width: 50%;
-      background: #fff;
-      border-radius: 40px;
-      padding: 8px 0;
       margin: 0 auto;
       display: flex;
 
-      input[type="text"] {
+      .phone-section {
+        position: relative;
         width: 100%;
-        font-size: 18px;
-        color: #2b2c2c;
-        background: none;
-        height: auto;
-        padding: 5px 20px;
-        border-radius: 20px;
-        border: none;
-        &:focus {
-          outline: 0;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        .call-icon {
+          height: 51px;
+          width: 32px;
+          background: url(../../assets/img/call-icon.png) center/cover no-repeat;
+        }
+
+        p {
+          color: #fff;
+        }
+
+        &:after {
+          position: absolute;
+          content: "";
+          top: 0;
+          left: 100%;
+          width: 3px;
+          height: 100%;
+          background-color: #fff;
         }
       }
-      input[type="submit"] {
-        width: 170px;
-        font-size: 18px;
-        color: #2b2278;
-        background-color: transparent;
-        padding: 5px 10px;
-        border: none;
-        text-align: center;
-        font-weight: 500;
-        text-transform: uppercase;
-        cursor: pointer;
-        &:hover {
-          color: #000;
-          background-color: transparent;
+
+      .mail-section {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        .mail-icon {
+          height: 31px;
+          width: 45px;
+          background: url(../../assets/img/mail-icon.png) center/cover no-repeat;
+        }
+
+        a {
+          color: #fff;
+
+          &:hover {
+            color: #2b2278;
+          }
         }
       }
     }
