--- a/src/styles/components/_video.scss
+++ b/src/styles/components/_video.scss
@@ -4,19 +4,33 @@
 
   .video-container {
     position: relative;
-    overflow-x: hidden;
-    height: 98vh;
-    cursor: pointer;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
 
-    .react-player {
-      width: 100% !important;
-      height: 100% !important;
-      overflow: hidden;
+    .video {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
 
-      video {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
+    .play-button {
+      background: url(../../assets/img/play-icon.png) center/cover;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 138px;
+      width: 138px;
+      padding: 15px 30px;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      display: block;
+
+      &:hover {
+        transform: translate(-50%, -50%) scale(1.1);
       }
     }
   }
