--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -38,7 +38,7 @@
       }
       :hover {
         color: $jouvance-color;
-        background-color: $charbon-color !important;
+        background-color: $argile-color !important;
       }
     }
   }
