--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -19,7 +19,7 @@
       }
 
       :hover {
-        background-color: $charbon-color;
+        background-color: $argile-color;
         // color: $olivenoir-color;
       }
     }
