--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,5 @@
 @import "./components/skills";
 @import "./components/video";
 @import "./components/footer";
+@import "./components/banner";
+@import "./components/product";
