--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,6 +1,6 @@
 .navigation {
-  padding: 10px 15px 0px;
-  background-color: $olivenoir-color;
+  padding: 0.6rem 1rem 0px;
+  background-color: $jouvance-color;
 
   ul {
     display: flex;
@@ -8,14 +8,14 @@
     align-content: center;
 
     a {
-      padding: 10px;
-      font-size: 20px;
+      padding: 0.5rem;
+      font-size: 1.25rem;
       text-transform: uppercase;
-      color: $jouvance-color;
+      color: $olivenoir-color;
 
       li {
-        padding: 10px 20px;
-        border-radius: 10px;
+        padding: 0.6rem 1.25rem;
+        border-radius: 0.6rem;
       }
 
       :hover {
