--- a/src/styles/components/_aboutus.scss
+++ b/src/styles/components/_aboutus.scss
@@ -13,13 +13,13 @@
       h2 {
         padding-bottom: 3rem;
         font-size: 2.5rem;
-        color: rgb(31, 31, 31);
+        color: $olivenoir-color;
         font-weight: bold;
       }
 
       p {
         font-size: 1rem;
-        color: rgb(31, 31, 31);
+        color: $olivenoir-color;
       }
     }
   }
@@ -33,7 +33,8 @@
     .img-right {
       height: 540px;
       width: 540px;
-      box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+      box-shadow: 0px 10px 13px -7px $olivenoir-color,
+        5px 5px 15px 5px rgba(0, 0, 0, 0);
       background: url("../../assets/img/Ranim.jpg") center/cover;
     }
   }
