--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -5,7 +5,7 @@
     h2 {
       padding-bottom: 50px;
       font-size: 40px;
-      color: rgb(31, 31, 31);
+      color: $olivenoir-color;
       font-weight: bold;
     }
 
